@@ -381,6 +381,9 @@ Bug Fixes
 * SOLR-4133: Cannot "set" field to null with partial updates when using the
   standard RequestWriter. (Will Butler, shalin)
 
+* SOLR-4223: "maxFormContentSize" in jetty.xml is not picked up by jetty 8
+  so set it via solr webapp context file. (shalin)
+
 Other Changes
 ----------------------
 
